test/tests/stages/11_long_integers/valid/long_expressions/assign.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  int
  identifier(main)
  (
  void
  )
  {
  long
  identifier(a)
  =
  const long(4294967290l)
  ;
  long
  identifier(b)
  =
  const long(0l)
  ;
  identifier(b)
  =
  identifier(a)
  ;
  return
  (
  identifier(b)
  ==
  const long(4294967290l)
  )
  ;
  }
