test/tests/stages/11_long_integers/invalid_types/conflicting_global_types.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(foo)
  =
  const int(3)
  ;
  long
  identifier(foo)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  ;
  }
